--- a/rank.html
+++ b/rank.html
@@ -6,6 +6,8 @@
 <body>
 <!-- Navigation -->
 <nav class="w3-bar w3-black">
+  <a href="ranking.html" class="w3-button w3-bar-item" ><img src="crick.jpg" width="100" height="30"/>
+</a>
   <a href="" class="w3-button w3-bar-item">ODI</a>
   <a href="https://www.cricbuzz.com/cricket-team" class="w3-button w3-bar-item">Test</a>
   <a href="" class="w3-button w3-bar-item">T20</a>
