--- a/ranking.html
+++ b/ranking.html
@@ -4,13 +4,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="w3.css">
 <body>
+ 
 <!-- Navigation -->
 <nav class="w3-bar w3-black">
-  <a href="" class="w3-button w3-bar-item">Home</a>
+    <a href="ranking.html" class="w3-button w3-bar-item" ><img src="crick.jpg" width="100" height="30"/>
+</a>
+  <!--<a href="ranking.html" ><img source="crick.png"></a>-->
   <a href="https://www.cricbuzz.com/cricket-team" class="w3-button w3-bar-item">Teams</a>
   <a href="" class="w3-button w3-bar-item">Series</a>
   <a href="rank.html" class="w3-button w3-bar-item">Ranking</a>
+
 </nav>
+<br>
+<br>
 
 </body>
 </html>
